created blocks - WORKS, PORTFOLIO

--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -2,7 +2,8 @@
 
 .btn {
     display: inline-block;
-    padding: 1.1rem 1.8rem;
+    // ем отталкивается от размера шрифта эл-та
+    padding: 1.05em 1.7em;
     min-width: 170px;
     vertical-align: top;
     font-size: 1.06rem;
@@ -13,7 +14,7 @@
     text-decoration: none;
     text-align: center;
     border: 1px solid @grey;
-    border-radius: 25px;
+    border-radius: 2em;
     background: none;
     cursor: pointer;
     transition: color 0.2s linear, background-color 0.2s linear, box-shadow .2s linear;
@@ -31,5 +32,13 @@
     //Если следующий элемент тоже кнопка, которая идет после кнопки, то для нее отдельно еще будет прописан margin-left
     +.btn {
         margin-left: 1rem;
+    }
+    
+    /* Modificators */
+    &--sm {
+        padding: .7em 1.1em;
+        font-size: .94rem;
+        font-weight: 700;
+        border-width: 2px;
     }
 }
