--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,245 @@
-html{font-size:15px}body{margin:0;padding:0;font-family:'Montserrat',sans-serif;font-size:1rem;color:#2B2A2C}h1,h2,h3,h4,h5,h6{margin:0}*,*:before,*:after{box-sizing:border-box}.container{width:100%;max-width:1200px;margin:0 auto;padding-left:1rem;padding-right:1rem}.header{padding:1.2rem 0}.header_inner{display:flex;justify-content:space-between;align-items:center}.user{display:flex}.user_avatar{width:57px;height:57px}.user_avatar img{border-radius:50%}.user_name{margin-bottom:3px;font-size:1.06rem;color:#2B2A2C;font-weight:700;line-height:1.2}.user_content{padding-left:9px}.user_prof{font-size:.8rem;color:rgba(43,42,44,0.7)}.nav{display:flex;align-items:center;height:100%}.nav_link{margin-left:2rem;position:relative;font-size:.93rem;color:#2B2A2C;text-transform:uppercase;font-weight:700;text-decoration:none}.nav_link:after{content:"";width:0;height:2px;background-color:#2B2A2C;position:absolute;bottom:-5px;left:0;z-index:1;transition:width .2s linear}.nav_link:hover:not(.nav_link--btn):after{width:100%}.nav_link--btn{padding:.66rem 2rem;border:2px solid #2B2A2C;border-radius:20px;transition:background-color .2s linear,color .2s linear}.nav_link--btn:hover{background-color:#2B2A2C;color:#fff}.intro_inner{display:flex;padding:100px 0 120px;background:url("../images/symbols.png") right bottom no-repeat;border-bottom:1px solid rgba(106,105,107,0.3);position:relative}.intro_content{width:50%}.intro_suptitle{font-size:2.13rem;color:#2B2A2C;font-weight:200}.intro_title{margin-bottom:5px;font-size:3rem;color:#2B2A2C;font-weight:700}.intro_text{margin-bottom:25px;font-size:1.2rem;color:rgba(43,42,44,0.7)}.intro_photo{position:absolute;bottom:0;right:70px;z-index:1}.social{display:flex;margin-bottom:42px}.social_link{margin-right:10px;text-decoration:none;transition:transform .2s linear}.social_link:hover{transform:translateY(-5px)}.btn{display:inline-block;padding:1.1rem 1.8rem;min-width:170px;vertical-align:top;font-size:1.06rem;font-family:inherit;line-height:1.1;color:#2B2A2C;text-transform:uppercase;text-decoration:none;text-align:center;border:1px solid #6a696b;border-radius:25px;background:none;cursor:pointer;transition:color .2s linear,background-color .2s linear,box-shadow .2s linear}.btn:focus{outline:none}.btn:hover{color:#fff;background-color:#2B2A2C;box-shadow:3px 2px 8px rgba(0,0,0,0.25)}.btn+.btn{margin-left:1rem}
+/* Colors */
+.text-center {
+  text-align: center;
+}
+html {
+  font-size: 15px;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1rem;
+  color: #2b2a2c;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+/* Blocks */
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-left: 1rem;
+  /*15px*/
+  padding-right: 1rem;
+}
+.header {
+  padding: 1.2rem 0;
+}
+.header_inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.user {
+  display: flex;
+}
+.user_avatar {
+  width: 57px;
+  height: 57px;
+}
+.user_avatar img {
+  border-radius: 50%;
+}
+.user_name {
+  margin-bottom: 3px;
+  font-size: 1.06rem;
+  color: #2b2a2c;
+  font-weight: 700;
+  line-height: 1.2;
+}
+.user_content {
+  padding-left: 9px;
+}
+.user_prof {
+  font-size: 0.8rem;
+  color: rgba(43, 42, 44, 0.7);
+  /*Для препроцессора LESS вместо rgba используем fade и затемняем на 70% */
+}
+.nav {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+.nav_link {
+  margin-left: 2rem;
+  position: relative;
+  font-size: 0.93rem;
+  color: #2b2a2c;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-decoration: none;
+  /* Modificators*/
+}
+.nav_link:after {
+  content: "";
+  width: 0;
+  height: 2px;
+  background-color: #2b2a2c;
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  z-index: 1;
+  transition: width .2s linear;
+}
+.nav_link:hover:not(.nav_link--btn):after {
+  width: 100%;
+}
+.nav_link--btn {
+  padding: 0.66rem 2rem;
+  border: 2px solid #2b2a2c;
+  border-radius: 20px;
+  transition: background-color 0.2s linear, color 0.2s linear;
+}
+.nav_link--btn:hover {
+  background-color: #2b2a2c;
+  color: #ffffff;
+}
+.intro_inner {
+  display: flex;
+  padding: 100px 0 120px;
+  background: url("../images/symbols.png") right bottom no-repeat;
+  border-bottom: 1px solid rgba(106, 105, 107, 0.3);
+  position: relative;
+}
+.intro_content {
+  width: 50%;
+}
+.intro_suptitle {
+  font-size: 2.13rem;
+  color: #2b2a2c;
+  font-weight: 200;
+}
+.intro_title {
+  margin-bottom: 5px;
+  font-size: 3rem;
+  color: #2b2a2c;
+  font-weight: 700;
+}
+.intro_text {
+  margin-bottom: 25px;
+  font-size: 1.2rem;
+  color: rgba(43, 42, 44, 0.7);
+}
+.intro_photo {
+  position: absolute;
+  bottom: 0;
+  right: 70px;
+  z-index: 1;
+}
+.social {
+  display: flex;
+  margin-bottom: 42px;
+}
+.social_link {
+  margin-right: 10px;
+  text-decoration: none;
+  transition: transform .2s linear;
+}
+.social_link:hover {
+  transform: translateY(-5px);
+}
+.btn {
+  display: inline-block;
+  padding: 1.05em 1.7em;
+  min-width: 170px;
+  vertical-align: top;
+  font-size: 1.06rem;
+  font-family: inherit;
+  line-height: 1.1;
+  color: #2b2a2c;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  border: 1px solid #6a696b;
+  border-radius: 2em;
+  background: none;
+  cursor: pointer;
+  transition: color 0.2s linear, background-color 0.2s linear, box-shadow 0.2s linear;
+  /* Modificators */
+}
+.btn:focus {
+  outline: none;
+}
+.btn:hover {
+  color: #ffffff;
+  background-color: #2b2a2c;
+  box-shadow: 3px 2px 8px rgba(0, 0, 0, 0.25);
+}
+.btn + .btn {
+  margin-left: 1rem;
+}
+.btn--sm {
+  padding: .7em 1.1em;
+  font-size: .94rem;
+  font-weight: 700;
+  border-width: 2px;
+}
+.works {
+  padding: 2.8rem 0;
+}
+.works__nav {
+  margin-bottom: 1.2rem;
+  display: flex;
+  justify-content: center;
+}
+.works__nav-link {
+  margin: 0 1.2rem;
+  font-size: .8rem;
+  color: rgba(43, 42, 44, 0.7);
+  text-decoration: none;
+}
+.works__nav-link:hover {
+  text-decoration: underline;
+}
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -1rem 2.8rem;
+}
+.portfolio__col {
+  flex-basis: 33.3333%;
+  padding: 1rem;
+}
+.work {
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 0.2s linear;
+}
+.work:hover {
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
+}
+.work__image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.work__content {
+  padding: 1rem .8rem;
+}
+.work__cat {
+  margin-bottom: .5rem;
+  font-size: .8rem;
+  color: #2b2a2c;
+  text-transform: uppercase;
+}
+.work__title {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.06rem;
+  color: #2b2a2c;
+  text-transform: uppercase;
+  font-weight: bold;
+}
