--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 .text-center {
   text-align: center;
 }
+.img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 html {
   font-size: 15px;
 }
@@ -12,6 +17,9 @@ body {
   font-size: 1rem;
   color: #2b2a2c;
 }
+body.no-scroll {
+  overflow: hidden;
+}
 h1,
 h2,
 h3,
@@ -19,6 +27,9 @@ h4,
 h5,
 h6 {
   margin: 0;
+}
+p {
+  margin: 0 0 1rem;
 }
 *,
 *:before,
@@ -182,12 +193,13 @@ h6 {
 }
 .btn--sm {
   padding: .7em 1.1em;
+  min-width: 0;
   font-size: .94rem;
   font-weight: 700;
   border-width: 2px;
 }
 .works {
-  padding: 2.8rem 0;
+  margin: 2.8rem 0;
 }
 .works__nav {
   margin-bottom: 1.2rem;
@@ -242,4 +254,379 @@ h6 {
   color: #2b2a2c;
   text-transform: uppercase;
   font-weight: bold;
+}
+.about {
+  margin: 8.4rem 0;
+}
+.about__inner {
+  display: flex;
+  max-width: 1090px;
+}
+.about__photo,
+.about__content {
+  width: 50%;
+}
+.about__photo {
+  position: relative;
+}
+.about__photo img {
+  position: relative;
+  z-index: 2;
+}
+.about__photo::before {
+  content: "";
+  width: 413px;
+  height: 413px;
+  background-color: #EFEFEF;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+}
+.about__content {
+  padding-left: 3.2rem;
+  margin-top: 2rem;
+}
+.about__title {
+  font-size: 3rem;
+  color: #2b2a2c;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.about__bigtitle {
+  position: relative;
+  left: -10px;
+  margin-bottom: 1.4rem;
+  font-size: 6.1rem;
+  color: rgba(43, 42, 44, 0.15);
+  font-weight: 700;
+  line-height: 1.1;
+  text-transform: uppercase;
+}
+.about__text {
+  margin-bottom: 2.8rem;
+  font-size: .8rem;
+  color: #6a696b;
+  line-height: 2;
+  font-weight: 300;
+}
+.reviews {
+  position: relative;
+  background: #332f30 url("../images/about_bg.png") center no-repeat;
+  padding: 4.6rem 0;
+  background-size: cover;
+}
+.reviews__item {
+  width: 100%;
+  max-width: 830px;
+  margin: 0 auto;
+}
+.reviews__text {
+  font-size: .94rem;
+  color: #ffffff;
+  line-height: 2.2;
+  text-align: center;
+}
+.reviews__author {
+  margin-top: -51px;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  z-index: 1;
+}
+.reviews__photo {
+  display: block;
+  border-radius: 50%;
+  width: 103px;
+  height: 103px;
+  margin: 0 auto .6rem;
+  border: 4px solid #EFEFEF;
+}
+.reviews__name {
+  margin-bottom: .3rem;
+  font-size: 1.6rem;
+  color: #2b2a2c;
+  font-weight: 700;
+}
+.reviews__company {
+  margin-bottom: .4rem;
+  font-size: .94rem;
+  color: #6a696b;
+  font-style: italic;
+  font-weight: 300;
+}
+.news {
+  margin-top: 15rem;
+  margin-bottom: 8rem;
+}
+.news__header {
+  margin-bottom: 3.6rem;
+  text-align: center;
+}
+.news__title {
+  margin-bottom: .2rem;
+  font-size: 3rem;
+  color: #2b2a2c;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.news__text {
+  font-size: 1.2rem;
+  color: #8d8d8e;
+  font-weight: 300;
+}
+.news__footer {
+  text-align: right;
+}
+.news__link {
+  color: #6a696b;
+  font-size: .94rem;
+}
+.news__link:hover {
+  text-decoration: none;
+}
+.articles {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -1rem;
+}
+.articles__col {
+  width: 33.3333%;
+  padding: 0 1rem;
+}
+.articles__item {
+  margin-bottom: 2rem;
+}
+.articles__header {
+  position: relative;
+  margin-bottom: 1.25rem;
+}
+.articles__content {
+  margin-bottom: 2rem;
+}
+.articles__date {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 77px;
+  height: 77px;
+  background-color: #2b2a2c;
+  color: #ffffff;
+  line-height: 1.4;
+  font-size: 1.06rem;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.articles__photo {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.articles__title {
+  margin-bottom: .6rem;
+  font-size: 1.2rem;
+  color: #2b2a2c;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.articles__title a {
+  color: inherit;
+  text-decoration: none;
+}
+.articles__title a:hover {
+  text-decoration: underline;
+}
+.articles__cat {
+  margin-bottom: 1.5rem;
+  font-size: .8rem;
+  color: #2b2a2c;
+  text-transform: uppercase;
+}
+.articles__text {
+  font-size: .8rem;
+  color: #6a696b;
+  font-weight: 300;
+  line-height: 2;
+}
+.footer {
+  padding: 1rem 0;
+  background-color: #2b2a2c;
+}
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+}
+.footer__credits {
+  display: flex;
+  align-items: center;
+}
+.footer__copyright {
+  margin-right: 1rem;
+  padding-right: .8rem;
+  border-right: 1px solid rgba(106, 105, 107, 0.35);
+  color: #6a696b;
+  font-size: .94rem;
+}
+.footer__social {
+  display: flex;
+  align-items: center;
+}
+.footer__social a {
+  margin-right: 1.2rem;
+  text-decoration: none;
+}
+.footer__social i {
+  color: #6a696b;
+  font-size: 1.2rem;
+}
+.footer__nav {
+  display: flex;
+  align-items: center;
+}
+.footer__nav-link {
+  margin-left: 1.5rem;
+  font-size: .94rem;
+  text-decoration: none;
+  color: #6a696b;
+}
+.footer__nav-link:hover {
+  text-decoration: underline;
+}
+.footer__nav-link--btn {
+  padding: .5rem 1.4rem;
+  border: 1px solid #8d8d8e;
+  border-radius: 20px;
+  line-height: 1.1;
+  transition: all .2s linear;
+}
+.footer__nav-link--btn:hover {
+  text-decoration: none;
+  background-color: #BBBCCC;
+  color: #2b2a2c;
+  border-color: #BBBCCC;
+}
+.modal {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  background-color: rgba(43, 42, 44, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  overflow: auto;
+}
+.modal__dialog {
+  position: relative;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  background-color: white;
+}
+.modal__close {
+  padding: 0;
+  position: absolute;
+  top: .9rem;
+  right: .9rem;
+  z-index: 1;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+  font-size: 2rem;
+  color: #2b2a2c;
+  transition: transform .2s linear;
+}
+.modal__close:hover {
+  transform: scale(1.1);
+}
+.modal-work {
+  display: flex;
+}
+.modal-work__preview {
+  width: 65%;
+  position: relative;
+  overflow: hidden;
+}
+.modal-work__photo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  transform: translate3d(-50%, -50%, 0);
+}
+.modal-work__content {
+  position: relative;
+  width: 35%;
+  padding: 3.4rem 6.6rem 1rem 1.73rem;
+}
+.modal-work__header {
+  margin-bottom: 2.2rem;
+}
+.modal-work__title {
+  margin-bottom: .2rem;
+  font-size: 2.12rem;
+  color: #2b2a2c;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.modal-work__info {
+  font-size: 1.2rem;
+  color: #6a696b;
+  text-transform: uppercase;
+}
+.modal-work__divider {
+  margin: 0 1rem;
+}
+.modal-work__client {
+  margin-bottom: 2.2rem;
+}
+.modal-work__client-title {
+  margin-bottom: .2rem;
+  font-size: 1.06rem;
+  color: #2b2a2c;
+  font-weight: 700;
+}
+.modal-work__client-company {
+  font-size: .94rem;
+  font-style: italic;
+  color: #6a696b;
+}
+.modal-work__text {
+  margin-bottom: 8.66rem;
+  font-size: .8rem;
+  color: #6a696b;
+  line-height: 2;
+  font-weight: 300;
+}
+.modal-work__footer {
+  width: 100%;
+  padding: 0 1.8rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+}
+.modal-work__btn {
+  font-size: .94rem;
+  color: #2b2a2c;
+  text-transform: uppercase;
+  background: none;
+  border: none;
+  padding: 0;
+  font-family: inherit;
+  cursor: pointer;
+}
+.modal-work__btn .fa-chevron-right {
+  margin-left: .5rem;
+}
+.modal-work__btn .fa-chevron-left {
+  margin-right: .5rem;
 }
