--- a/css/style.less
+++ b/css/style.less
@@ -13,10 +13,19 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
     color: @black;
+    
+    // Отменяем скролл при вызове модального окна
+    &.no-scroll {
+        overflow: hidden;
+    }
 }
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
+}
+
+p {
+    margin: 0 0 1rem;
 }
 
 *,
@@ -36,3 +45,10 @@ h1, h2, h3, h4, h5, h6 {
 @import "blocks/works";
 @import "blocks/portfolio";
 @import "blocks/work";
+@import "blocks/about";
+@import "blocks/reviews";
+@import "blocks/news";
+@import "blocks/articles";
+@import "blocks/footer";
+@import "blocks/modal";
+@import "blocks/modal-work";
