finish template + js

--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -42,4 +42,15 @@
         font-weight: 700;
         border-width: 2px;
     }
+    
+    &--thin {
+        min-width: 145px;
+        font-style: .8rem;
+    }
+    
+    @media @tablet {
+        font-size: 1rem;
+        min-width: 110px;
+        padding: 1rem 1.5rem;
+    }
 }
