--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -3,6 +3,11 @@
 .news {
     margin-top: 15rem;
     margin-bottom: 8rem;
+
+    @media @tablet {
+        margin-bottom: 3rem;
+        margin-top: 14rem;
+    }
 }
 
 .news__header {
@@ -31,7 +36,7 @@
 .news__link {
     color: @grey;
     font-size: .94rem;
-    
+
     &:hover {
         text-decoration: none;
     }
