--- a/css/style.less
+++ b/css/style.less
@@ -1,7 +1,6 @@
 //compress: true
 
 @import "vars";
-@import "helpers";
 
 html {
     font-size: 15px;
@@ -34,6 +33,9 @@ p {
     box-sizing: border-box;
 }
 
+/* Vendor */
+@import "vendor/slick";
+
 /* Blocks */
 @import "blocks/container";
 @import "blocks/header";
@@ -52,3 +54,11 @@ p {
 @import "blocks/footer";
 @import "blocks/modal";
 @import "blocks/modal-work";
+@import "blocks/timeline";
+@import "blocks/progress-bar";
+@import "blocks/contact";
+@import "blocks/form";
+@import "blocks/burger";
+
+/* Helpers classes */
+@import "helpers";
