--- a/css/vars.less
+++ b/css/vars.less
@@ -5,3 +5,9 @@
 @grey: #6a696b;
 @grey-light: #8d8d8e;
 @white: #fff;
+
+/* Media queries */
+@mobile-sm: ~"(max-width: 565px)";
+@mobile: ~"(max-width: 767px)";
+@tablet: ~"(max-width: 991px)";
+@laptop: ~"(max-width: 1199px)";
