--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -2,26 +2,36 @@
 
 .about {
     margin: 8.4rem 0;
+
+    @media @tablet {
+        margin: 0;
+    }
 }
 
 .about__inner {
     display: flex;
+    flex-wrap: wrap;
     max-width: 1090px;
 }
 
 .about__photo,
 .about__content {
     width: 50%;
+
+    @media @tablet {
+        width: 100%;
+    }
 }
 
 .about__photo {
     position: relative;
-    
+
     img {
-        position: relative;
+        position: absolute;
+        bottom: 0;
         z-index: 2;
     }
-    
+
     &::before {
         content: "";
         width: 413px;
@@ -32,11 +42,34 @@
         bottom: 0;
         z-index: 1;
     }
+
+    @media @tablet {
+        order: 2;
+
+        &::before {
+            width: 100%;
+            height: 65%;
+            left: 0;
+        }
+
+        img {
+            position: relative;
+        }
+    }
 }
 
 .about__content {
     padding-left: 3.2rem;
     margin-top: 2rem;
+
+    @media @tablet {
+        order: 1;
+        margin-bottom: 2rem;
+    }
+
+    @media @mobile-sm {
+        padding-left: 0;
+    }
 }
 
 .about__title {
@@ -44,6 +77,10 @@
     color: @black;
     font-weight: 700;
     text-transform: uppercase;
+
+    @media @laptop {
+        font-size: 2.5rem;
+    }
 }
 
 .about__bigtitle {
@@ -55,6 +92,14 @@
     font-weight: 700;
     line-height: 1.1;
     text-transform: uppercase;
+
+    @media @laptop {
+        font-size: 4rem;
+    }
+    
+    @media @mobile-sm {
+        left: 0;
+    }
 }
 
 .about__text {
