--- a/css/blocks/articles.less
+++ b/css/blocks/articles.less
@@ -9,10 +9,21 @@
 .articles__col {
     width: 33.3333%;
     padding: 0 1rem;
+
+    @media @tablet {
+        width: 100%;
+    }
 }
 
 .articles__item {
     margin-bottom: 2rem;
+
+    @media @tablet {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 }
 
 .articles__header {
@@ -53,11 +64,11 @@
     color: @black;
     text-transform: uppercase;
     font-weight: 700;
-    
+
     a {
         color: inherit;
         text-decoration: none;
-        
+
         &:hover {
             text-decoration: underline;
         }
