--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -7,12 +7,23 @@
 
 .footer__inner {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .footer__credits {
     display: flex;
     align-items: center;
+    
+    @media @tablet {
+        margin-bottom: 1rem;
+        width: 100%;
+        justify-content: center;
+    }
+    
+    @media @mobile-sm {
+        flex-direction: column;
+    }
 }
 
 .footer__copyright {
@@ -21,6 +32,12 @@
     border-right: 1px solid fade(@grey, 35%);
     color: @grey;
     font-size: .94rem;
+    
+    @media @mobile-sm {
+        margin-right: 0;
+        margin-bottom: 1rem;
+        border-right: 0;
+    }
 }
 
 .footer__social {
@@ -30,6 +47,10 @@
     a {
         margin-right: 1.2rem;
         text-decoration: none;
+        
+        @media @tablet {
+            margin: 0 .5rem;
+        }
     }
     
     i {
@@ -41,6 +62,12 @@
 .footer__nav {
     display: flex;
     align-items: center;
+    
+    @media @tablet {
+        width: 100%;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
 }
 
 .footer__nav-link {
@@ -66,5 +93,9 @@
             color: @black;
             border-color: #BBBCCC;
         }
+    }
+    
+    @media @tablet {
+        margin: 0 .5rem .5rem;
     }
 }
