--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -1,21 +1,40 @@
 //main: ../style.less
 
+.intro {
+    @media @mobile {
+        margin-top: 100px;
+    }
+}
+
 .intro_inner {
     display: flex;
-    padding: 100px 0 120px;
+    padding: 6.6rem 0 8rem;
     background: url("../images/symbols.png") right bottom no-repeat;
     border-bottom: 1px solid fade(@grey, 30%);
     position: relative;
+
+    @media @tablet {
+        padding: 3rem 0;
+        background-size: 400px auto;
+    }
 }
 
 .intro_content {
     width: 50%;
+    
+    @media @mobile-sm {
+        width: 100%;
+    }
 }
 
 .intro_suptitle {
     font-size: 2.13rem;
     color: @black;
     font-weight: 200;
+    
+    @media @tablet {
+        font-size: 1.5rem;
+    }
 }
 
 .intro_title {
@@ -23,6 +42,10 @@
     font-size: 3rem;
     color: @black;
     font-weight: 700;
+    
+    @media @tablet {
+        font-size: 2rem;
+    }
 }
 
 .intro_text {
@@ -32,8 +55,16 @@
 }
 
 .intro_photo {
-   position: absolute;
+    position: absolute;
     bottom: 0;
     right: 70px;
     z-index: 1;
+
+    @media @tablet {
+        height: 342px;
+    }
+    
+    @media @mobile-sm {
+        display: none;
+    }
 }
