--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -1,7 +1,7 @@
 // main: ../style.less
 
 .modal {
-    display: flex;
+    display: none;
     width: 100%;
     height: 100%;
     padding: 1rem;
@@ -11,6 +11,10 @@
     left: 0;
     z-index: 1000;
     overflow: auto;
+    
+    &.show {
+        display: flex;
+    }
 }
 
 .modal__dialog {
@@ -19,6 +23,12 @@
     max-width: 1200px;
     margin: auto;
     background-color: white;
+    transform: rotateX(90deg);
+    transition: transform .2s linear;
+    
+    &--sm {
+        max-width: 900px;
+    }
 }
 
 .modal__close {
@@ -27,7 +37,7 @@
     top: .9rem;
     right: .9rem;
     z-index: 1;
-    background-color: inherit;
+    background: none;
     border: none;
     cursor: pointer;
     font-size: 2rem;
@@ -37,4 +47,23 @@
     &:hover {
         transform: scale(1.1);
     }
+}
+
+.modal__content {
+    padding: 5rem 1rem;
+}
+
+.modal__title {
+    margin-bottom: 3.6rem;
+    font-size: 3rem;
+    text-transform: uppercase;
+    color: @black;
+    font-weight: 700;
+}
+
+.modal__subtitle {
+    text-transform: uppercase;
+    font-size: 1.06rem;
+    color: @black;
+    font-weight: 400;
 }
