--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -2,8 +2,28 @@
 
 .nav {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     height: 100%;
+
+    @media @mobile {
+        display: none;
+        margin-top: -1px;
+        height: auto;
+        padding: 1rem;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        z-index: 100;
+        width: 100%;
+        background-color: #fff;
+        text-align: center;
+        box-shadow: 0 23px 20px rgba(0, 0, 0, 0.3);
+
+        &.show {
+            display: flex;
+        }
+    }
 }
 
 .nav_link {
@@ -27,24 +47,39 @@
         transition: width .2s linear;
 
     }
-    
+
     //Применяем hover для всех классов кроме .nav_link--btn
     &:hover:not(.nav_link--btn) {
         &:after {
             width: 100%;
+            
+            @media @mobile {
+                width: 0;
+            }
         }
     }
-    
+
+    @media @mobile {
+        margin-left: 0;
+        width: 100%;
+        padding: .5rem 1rem;
+    }
+
     /* Modificators*/
     &--btn {
         padding: 0.66rem 2rem;
         border: 2px solid @black;
         border-radius: 20px;
         transition: background-color .2s linear, color .2s linear;
-        
+
         &:hover {
             background-color: @black;
             color: @white;
+        }
+
+        @media @mobile {
+            width: auto;
+            margin: 0 auto;
         }
     }
 }
