--- a/css/blocks/reviews.less
+++ b/css/blocks/reviews.less
@@ -5,6 +5,10 @@
     background: #332F30 url("../images/about_bg.png") center no-repeat;
     padding: 4.6rem 0;
     background-size: cover;
+    
+    @media @tablet {
+        margin-top: 2rem;
+    }
 }
 
 .reviews__item {
